--- a/#src/scss/typography.scss
+++ b/#src/scss/typography.scss
@@ -1,4 +1,4 @@
-.header, .hero-block, .logos-list, .reviews, .stack-up, .management, .questions, .book-free, .check-out {
+.hero-block, .logos-list, .reviews, .stack-up, .management, .questions, .book-free, .check-out {
   h1, h2, h3, h4, h5, h6, h7 {
     font-weight: 700;
     color: $col-dark-navy;
