--- a/docs/css/style.css
+++ b/docs/css/style.css
@@ -178,17 +178,17 @@ h6 {
   font-size: 14px;
   line-height: 14px;
   padding: 12px 30px;
-  border-radius: 100px;
+  border-radius: 8px;
   font-weight: 700;
   white-space: nowrap;
   -webkit-transition: 300ms;
   -o-transition: 300ms;
   transition: 300ms;
+  color: #DA5D03;
+  background-color: #fff;
 }
 
 .btn-cta._orange {
-  color: #fff;
-  background-color: #DA5D03;
   border: 2px solid #DA5D03;
 }
 
@@ -210,11 +210,11 @@ h6 {
   padding: 16px 60px 16px 32px;
 }
 
-.btn-cta-v.ico-play-mod svg {
+.btn-cta-v.ico-play-mod:before {
+  content: "";
   position: absolute;
   width: 20px;
   height: 20px;
-  fill: #fff;
   right: 32px;
   top: 50%;
   -webkit-transform: translateY(-50%);
@@ -223,6 +223,10 @@ h6 {
   -webkit-transition: 300ms;
   -o-transition: 300ms;
   transition: 300ms;
+  background-image: url("../img/play-ico.svg");
+  background-size: 20px 20px;
+  background-position: center;
+  background-repeat: no-repeat;
 }
 
 .btn-cta-v._orange {
@@ -461,6 +465,18 @@ h6 {
   padding: 14px 40px 32px;
 }
 
+.header__content_navigation .navigation__cta_link:nth-child(1) {
+  -webkit-box-ordinal-group: 3;
+      -ms-flex-order: 2;
+          order: 2;
+}
+
+.header__content_navigation .navigation__cta_link:nth-child(2) {
+  -webkit-box-ordinal-group: 2;
+      -ms-flex-order: 1;
+          order: 1;
+}
+
 .header__content_navigation .navigation__cta_link.ico-svg {
   padding: 14px 40px 32px 23px;
   margin: 0 0 0 40px;
@@ -482,19 +498,6 @@ h6 {
   background-image: url("../img/phone.svg");
 }
 
-.header__content_navigation .navigation__cta_link:before {
-  content: "";
-  position: absolute;
-  right: 0;
-  top: calc(50% - 9px);
-  width: 1px;
-  -webkit-transform: translateY(-50%);
-      -ms-transform: translateY(-50%);
-          transform: translateY(-50%);
-  height: 17px;
-  background-color: #E3E3E3;
-}
-
 .header__content_navigation .navigation__cta_link span {
   display: none;
   font-size: 16px;
@@ -506,6 +509,9 @@ h6 {
   -ms-flex-item-align: start;
       align-self: flex-start;
   margin: 0 0 0 37px;
+  -webkit-box-ordinal-group: 4;
+      -ms-flex-order: 3;
+          order: 3;
 }
 
 .header__content_navigation .navigation__cta .btn-cta span:nth-child(2) {
@@ -1655,8 +1661,8 @@ h6 {
   }
 
   .btn-cta._orange:hover {
-    color: #DA5D03;
-    background-color: #fff;
+    color: #fff;
+    background-color: #DA5D03;
   }
 
   .btn-cta-v._orange:hover {
@@ -1664,8 +1670,8 @@ h6 {
     background-color: #fff;
   }
 
-  .btn-cta-v._orange:hover.ico-play-mod svg {
-    fill: #DA5D03;
+  .btn-cta-v._orange:hover.ico-play-mod:before {
+    background-image: url("../img/play-ico-o.svg");
   }
 
   .btn-cta-v._white:hover {
@@ -1930,6 +1936,12 @@ h6 {
     border-bottom: 1px solid #DA5D03;
   }
 
+  .header__content_navigation .navigation__cta_link:nth-child(2) {
+    -webkit-box-ordinal-group: 2;
+        -ms-flex-order: 1;
+            order: 1;
+  }
+
   .header__content_navigation .navigation__cta_link.ico-svg {
     border-top: 1px solid #E3E3E3;
     border-bottom: 1px solid #E3E3E3;
@@ -1949,6 +1961,9 @@ h6 {
   }
 
   .header__content_navigation .navigation__cta .btn-cta {
+    -webkit-box-ordinal-group: 3;
+        -ms-flex-order: 2;
+            order: 2;
     margin: 0;
     padding: 22px 102px;
     -ms-flex-item-align: center;
